--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+	<section id="card">
+		<image src="https://storage.googleapis.com/acciojob-open-file-collections/pricing-card.png"></image>
+		<h1>Pricing Card</h1>
+		<p>Price: Rs.200</p>
+		<p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<button>Buy Now</button>
+		<div id=""></div>
+	</section>
+	<!-- <image src="https://storage.googleapis.com/acciojob-open-file-collections/pricing-card.png"></image> -->
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
